updated china china china

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <div class="container">
             <div>
-                <h3>WORLD</h3>
+                <h3>CHINA CHINA CHINA</h3>
                 <div class="score">
                     <h1 id="home" >0</h1>
                 </div>
