--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <div class="container">
             <div>
-                <h3>CHINA CHINA INDIA</h3>
+                <h3>TEAM 1 - CHINA & INDIA</h3>
                 <div class="score">
                     <h1 id="home" >0</h1>
                 </div>
@@ -18,7 +18,7 @@
                 </div>    
             </div>
             <div>
-                <h3>TRUMP</h3>
+                <h3>TEAM 2- TRUMP</h3>
                 <div class="score">
                     <h1 id="guest" >0</h1>
                 </div>
